package com.zjk.hy.design.command;

/**
 * 命令接收者
 */
public abstract class Receiver {
    public abstract void doSomeThing();
}
